# rust_cli_chess

./: .gitignore  .swp  Cargo.toml  LICENSE  README.md  t.txt
benches/: benches.rs
src/: lib.rs  main.rs
src/chess/: bk.rs  board.rs  board_manager.rs  mod.rs  parse.rs  piece.rs  piece_movement.rs  piece_movment.rs
src/chess/pieces/: knight.rs  mod.rs  pawn.rs  piece.rs
tests/: tests.rs
