[package]
name = "cte"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 2
overflow-checks = true

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benches"
harness = false
